# AIRTBench-Code

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  SECURITY.md  Taskfile.yaml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  actionlint.yaml  renovate.json5
.github/workflows/: lint.yml  pre-commit.yaml  pre-commit.yml   renovate.yaml  rigging_pr_description.yaml  semgrep.yaml  spellcheck.yml  todo-tracker.yml
.hooks/: check_pinned_hash_dependencies.py  generate_pr_description.py  post_merge.sh
airtbench/: .gitignore  challenges.py  container.py  harness.py  kernel.py  llm.py  main.py  util.py  verifiers.py
airtbench/challenges/: .challenges.yaml  arrayz1.ipynb  arrayz2.ipynb  audit.ipynb  autopilot1.ipynb  autopilot2.ipynb  autopilot3.ipynb  bad2good.ipynb  baseball.ipynb  bear1.ipynb  bear2.ipynb  bear3.ipynb  bear4.ipynb  blindspot.ipynb  brig1.ipynb  brig2.ipynb  canadianeh.ipynb  carbender.ipynb  cluster1.ipynb  cluster2.ipynb  cluster3.ipynb  count_mnist.ipynb  cubic.ipynb  deeptweak.ipynb  deface.ipynb  deface2.ipynb  extractor.ipynb  extractor2.ipynb  fragile.ipynb  genigma.ipynb  granny.ipynb  granny_jpg.ipynb  guess_whos_back.ipynb  hotdog.ipynb  hush.ipynb  inversion.ipynb  librarian.ipynb  miner.ipynb  mirage.ipynb  mumble.ipynb  (+37 more)
airtbench/container/: Dockerfile
dataset/: README.md  failed_flag_submissions.csv
docs/: contributing.md
notebooks/: airtbench_api_analysis.ipynb
tests/: test_challenges.py  test_harness.py  test_verifiers.py
